; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_devtimer.c_timeval_to_absolutetime.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_devtimer.c_timeval_to_absolutetime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

@NSEC_PER_SEC = common dso_local global i32 0, align 4
@NSEC_PER_USEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @timeval_to_absolutetime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @timeval_to_absolutetime(i64 %0) #0 {
  %2 = alloca %struct.timeval, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = bitcast %struct.timeval* %2 to i64*
  store i64 %0, i64* %5, align 4
  %6 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @NSEC_PER_SEC, align 4
  %9 = call i32 @clock_interval_to_absolutetime_interval(i32 %7, i32 %8, i64* %3)
  %10 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @NSEC_PER_USEC, align 4
  %13 = call i32 @clock_interval_to_absolutetime_interval(i32 %11, i32 %12, i64* %4)
  %14 = load i64, i64* %3, align 8
  %15 = load i64, i64* %4, align 8
  %16 = add nsw i64 %14, %15
  ret i64 %16
}

declare dso_local i32 @clock_interval_to_absolutetime_interval(i32, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
